fix alignment nonsense

--- a/src/mit-planner/Components/TimeGrid/TimeGrid.module.css
+++ b/src/mit-planner/Components/TimeGrid/TimeGrid.module.css
@@ -34,5 +34,4 @@
     border-bottom-style: solid;
     border-left-style: solid;
     box-sizing: border-box;
-    box-shadow: 0 4px 6px -6px rgba(0,0,0,0.75);
 }
